prepare for deployment

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     </div>
     <div class="content">
         <p>
-            I build a lot of computers and do a lot of 3D printing. 
+            I do a lot of 3D printing. 
         </p>
-        <br>
         <img src="https://external-preview.redd.it/QaEkieViRcSwP5lpXfFTOv_VSx9TvanoZ3zo6UFdCFc.jpg?width=640&crop=smart&auto=webp&s=f829aa37deb4e1fe78230c08136d9cd0f1e3a2f2">
+        <p>I also build a lot of computers.</p>
+        <img src="https://preview.redd.it/7dr28twziax81.jpg?width=640&crop=smart&auto=webp&s=6473e60a4fa89632769022fa2de399e84f206e3b">
     </div>
     <div class="footer">
-        (contact info goes here)
+        <p>(contact info goes here)</p>
     </div>
 
 </body>
